# waifu2x-ios

./: .gitignore  .gitmodules  LICENSE  README.md  generate-ncnn.sh
realsr-ncnn-vulkan-shader-spv-hex/: CMakeLists.txt
waifu2x-ios/: AppDelegate.h  AppDelegate.m  GPUInfo.h  GPUInfo.mm  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m  vkPeakBenchmarkViewController.h  vkPeakBenchmarkViewController.mm  waifu2x.cpp  waifu2x.h  waifu2x_postproc.spv.hex.h  waifu2x_postproc_fp16s.spv.hex.h  waifu2x_postproc_int8s.spv.hex.h  waifu2x_postproc_tta.spv.hex.h  waifu2x_postproc_tta_fp16s.spv.hex.h  waifu2x_postproc_tta_int8s.spv.hex.h  waifu2x_preproc.spv.hex.h  waifu2x_preproc_fp16s.spv.hex.h  waifu2x_preproc_int8s.spv.hex.h  waifu2x_preproc_tta.spv.hex.h  waifu2x_preproc_tta_fp16s.spv.hex.h  waifu2x_preproc_tta_int8s.spv.hex.h  waifu2xios.h  waifu2xios.mm
waifu2x-ios.xcodeproj/: project.pbxproj
waifu2x-ios.xcodeproj/xcuserdata/cocoa.xcuserdatad/xcschemes/: xcschememanagement.plist
waifu2x-ios/Base.lproj/: Main.storyboard
waifu2x-ncnn-vulkan-shader-spv-hex/: CMakeLists.txt
